add download_path to template

--- a/templates/config.yaml.erb
+++ b/templates/config.yaml.erb
@@ -24,4 +24,7 @@
 <%= policy['id'] -%>:
   :profile: '<%= policy['profile_id'] -%>'
   :content_path: '<%= policy['content_path'] -%>'
+  # Download path
+  # A url with SCAP content to download, in case it is not already on the host
+  :download_path: '<%= policy['download_path'] -%>'
 <% end %>
