explanation about download path

--- a/templates/config.yaml.erb
+++ b/templates/config.yaml.erb
@@ -25,6 +25,6 @@
   :profile: '<%= policy['profile_id'] -%>'
   :content_path: '<%= policy['content_path'] -%>'
   # Download path
-  # A url with SCAP content to download, in case it is not already on the host
+  # A path to download SCAP content from proxy
   :download_path: '<%= policy['download_path'] -%>'
 <% end %>
