Fixed Typo in config template

--- a/templates/config.yaml.erb
+++ b/templates/config.yaml.erb
@@ -16,7 +16,7 @@
 :host_certificate: '<%= @host_certificate %>'
 # Client private key
 # It could be Puppet agent private key (e.g., '/var/lib/puppet/ssl/private_keys/myhost.example.com.pem')
-# Or (recommended for client reporting to Katello) consumer private key (e.g., '/etc/pki/consumer/cert.pem')
+# Or (recommended for client reporting to Katello) consumer private key (e.g., '/etc/pki/consumer/key.pem')
 :host_private_key: '<%= @host_private_key %>'
 
 # policy (key is id as in Foreman)
