Fixes #14158 - Add support for tailoring file

--- a/templates/config.yaml.erb
+++ b/templates/config.yaml.erb
@@ -27,4 +27,6 @@
   # Download path
   # A path to download SCAP content from proxy
   :download_path: '<%= policy['download_path'] -%>'
+  :tailoring_path: '<%= policy['tailoring_path'] -%>'
+  :tailoring_download_path: '<%= policy['tailoring_download_path'] -%>'
 <% end %>
