Fixes #26700 - Add timeout

--- a/templates/config.yaml.erb
+++ b/templates/config.yaml.erb
@@ -5,6 +5,9 @@
 :server: '<%= @server %>'
 :port: <%= @port %>
 
+# Timeout for sending reports to proxy
+:timeout: <%= @timeout %>
+
 # Should --fetch-remote-resources be added to `oscap xccdf eval` command
 :fetch_remote_resources: <%= @fetch_remote_resources %>
 
